template/tomcat7-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tomcat7-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tomcat7
spec:
  hosts:
  - "*"
  gateways:
  - tomcat7-gateway
  http:
  - match:
    - uri:
        exact: /simple
    - uri:
        exact: /web
    - uri:
        exact: /web2
    route:
    - destination:
        host: simple-app
        port:
          number: 8080
